--- a/public/index.html
+++ b/public/index.html
@@ -6,28 +6,59 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i" rel="stylesheet">
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweets-container.css" type="text/css" />
+
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
+      <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
     </nav>
 
     <!-- Page-specific (main) content here -->
-    <main class="container">
-    </main>
+  <main class="container">
+      <section class="new-tweet">
+        <h2 class="compose-tweet">Compose Tweet</h2>
+        <hr>
+        <form action="/tweets/" method="POST">
+          <textarea class="textarea" name="text" placeholder="What are you humming about?"></textarea>
+          <input class="tweet-button" type="submit" value="Tweet">
+          <span class="counter">140</span>
+        </form>
+      </section>
+     
+    <section class="all-tweets">
 
+      <!-- <article class="tweet">
+        <header>
+          <img class="avatar" src="/images/emoji.png">
+          <h2>Bill Fields</h2>
+          <p class="handle">@MrFields</p>
+        </header>
+        <p class="content">Little tweet here</p>
+        <footer>
+          <p class="date-posted">10 days ago</p>
+        </footer>
+      </article> -->
+
+    </section>
+  
+  </main>
   </body>
 </html>
