--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button class="compose-button">Compose</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
@@ -41,6 +42,13 @@
           <input class="tweet-button" type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
+        <div class="error-container">
+          <div class="error">
+            <h2>Error!</h2>
+            <p>Sample Text To Be Replaced</p>
+            <button>Close</button>
+          </div>
+        </div>
       </section>
      
     <section class="all-tweets">
